<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:background="@drawable/background"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:fontFamily="monospace"
        android:layout_marginLeft="15dp"
        android:paddingTop="8dp"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentBottom="true"
        android:gravity="center_vertical"
        android:textSize="21sp"
        android:textColor="#FFFEFE"
        android:textStyle="bold"
        android:text="Bantuan"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="10dp">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="65dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            app:cardBackgroundColor="#FFFFFF"
            app:cardElevation="4dp"
            app:cardCornerRadius="5dp"
            android:id="@+id/trik"

            >

          <LinearLayout
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:orientation="vertical">
              <LinearLayout
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:layout_gravity="center_vertical"
                  android:paddingLeft="20dp"
                  android:paddingRight="20dp"
                  android:orientation="horizontal">


                  <TextView
                      android:layout_width="200dp"
                      android:layout_height="wrap_content"
                      android:layout_marginTop="25dp"
                      android:fontFamily="monospace"
                      android:lineHeight="20dp"
                      android:text="Begini cara tambal ban sendiri. "
                      android:textColor="#665F5F"
                      android:textSize="17sp"
                      android:textStyle="bold" />

                  <ImageView
                      android:layout_width="100dp"
                      android:layout_height="100dp"
                      android:src="@drawable/trikmotor"
                      />
              </LinearLayout>


              <me.biubiubiu.justifytext.library.JustifyTextView
                  android:id="@+id/text"
                  android:layout_marginBottom="20dp"
                  android:layout_marginLeft="20dp"
                  android:layout_width="match_parent"
                  android:textSize="16dp"
                  android:layout_marginTop="20dp"
                  android:lineHeight="25dp"
                  android:layout_height="wrap_content"
                  android:text="@string/article1"
                  />
              <me.biubiubiu.justifytext.library.JustifyTextView
                  android:layout_marginLeft="20dp"
                  android:layout_marginTop="10dp"
                  android:layout_width="wrap_content"
                  android:textSize="16dp"
                  android:lineHeight="25dp"
                  android:layout_height="wrap_content"
                  android:text="@string/judul1"
                  android:textStyle="bold"
                  />
              <me.biubiubiu.justifytext.library.JustifyTextView
                  android:layout_marginBottom="40dp"
                  android:layout_marginLeft="20dp"
                  android:layout_marginTop="5dp"
                  android:layout_width="match_parent"
                  android:textSize="16dp"
                  android:lineHeight="25dp"
                  android:layout_height="wrap_content"
                  android:text="@string/isiarticle1"
                  />

          </LinearLayout>



        </androidx.cardview.widget.CardView>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>